fixes during the tutorial

--- a/tutorial_notebooks/03_analyze3D.ipynb
+++ b/tutorial_notebooks/03_analyze3D.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -135,13 +135,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "26b439ef3ef64778a6d22db6e6b14c4c",
+       "model_id": "fbd97402c58d4ecebf0d4ad6e868bb71",
        "version_major": 2,
        "version_minor": 0
       },
@@ -166,13 +166,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9346d1bca0a34715bc955dee87cc7e67",
+       "model_id": "3f8868dcd59141e4867a16520f54a35e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -203,13 +203,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5c52e0f6cc6f414e921bc8d2c5f6e3ab",
+       "model_id": "2f96370c19d74b1ba7b32b654c2ebeab",
        "version_major": 2,
        "version_minor": 0
       },
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -253,18 +253,18 @@
      "data": {
       "text/plain": [
        "(<Figure size 1152x720 with 8 Axes>,\n",
-       " array([<matplotlib.axes._subplots.AxesSubplot object at 0x1267301d0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x126761898>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x126929b00>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x12695cda0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x12699c080>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1269ce320>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1269fe5c0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x126a31828>],\n",
+       " array([<matplotlib.axes._subplots.AxesSubplot object at 0x1234f9080>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x12343e9b0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x123797c50>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x123a26eb8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x12b6cc198>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1239a6208>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x12395c6d8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1237ed940>],\n",
        "       dtype=object))"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -290,18 +290,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d212fda0ff3e4cdd8584e69cb62c6b6f",
+       "model_id": "79d0c51451e94906af91e6b0306767e6",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=5, description='z', max=60), Output()), _dom_classes=('widget-interact',…"
+       "interactive(children=(IntSlider(value=5, description='z', max=200), Output()), _dom_classes=('widget-interact'…"
       ]
      },
      "metadata": {},
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,13 +396,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d9f4d655089d4ae494356510c3a610ac",
+       "model_id": "06121803dc7a41148e61f327cd695ec8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -430,13 +430,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cd047b9e71004bff8bcd10586fb6c0b9",
+       "model_id": "620949494d07455e859bd468c473a5be",
        "version_major": 2,
        "version_minor": 0
       },
@@ -464,16 +464,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x12f240a90>"
+       "<matplotlib.image.AxesImage at 0x137d07a20>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -498,16 +498,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x12f32ce10>"
+       "<matplotlib.image.AxesImage at 0x137e47e48>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -539,16 +539,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x12fcdd438>"
+       "<matplotlib.image.AxesImage at 0x138070d68>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -575,16 +575,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x130562c88>"
+       "<matplotlib.image.AxesImage at 0x13aa8bac8>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,13 +623,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ec441b1072864557a60b8aa86e5fb7ce",
+       "model_id": "c25e7a49f81047d8a41efba5a5f660e2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +704,7 @@
        "14"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -755,7 +755,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2d22cb62bb554f5f8a6e14b13774b90c",
+       "model_id": "03132f4fc1ec4589bb5e8cf233741048",
        "version_major": 2,
        "version_minor": 0
       },
@@ -783,7 +783,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## How about some deep learning?"
+    "# How about some deep learning?"
    ]
   },
   {
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -847,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,6 +1006,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
